@@ -3,6 +3,9 @@ dh-make-perl (0.68-1) UNRELEASED; urgency=low
   * make: fix a typo (DpkgList -> DpkgLists). Thanks to Dominic Hargreaves
     Closes: #580101
   * make: fix problems with --refresh
+  * DpkgLists.t: do not insist that '/bin/perl' (or the corresponding regex) is
+    only in perl-base. Instead, ensure that 'perl-base' is present in the
+    returned list. Closes: #580025 -- FTBFS with perl-debug installed
 
  -- Damyan Ivanov <dmn@debian.org>  Mon, 03 May 2010 23:43:15 +0300
 
