@@ -16,6 +16,10 @@
 
     Config: honour values given to the constructor
 
+    DpkgLists.t: do not insist that '/bin/perl' (or the corresponding regex) is
+        only in perl-base. Instead, ensure that 'perl-base' is present in the
+        returned list. Debian bug #580025
+
 0.67
     POD: drop "--" in front of the commands.
     refresh: ensure ->rules is there before attempting to fiddle quilt
